--- a/components/i18n/en.json
+++ b/components/i18n/en.json
@@ -15,26 +15,26 @@
     "call": "Call",
     "edit": "Edit",
 
-    "historyContact": "History Phones",
-    "historyBlock": "History Blocked",
+    "historyContact": "Called History",
+    "historyBlock": "Blocked History",
     "incoming": "Incoming",
     "outgoing": "Outgoing",
     "missed": "Missed",
     "voicemail": "Voicemail",
-    "rejected": "Rejected",
+    "rejected": "Reject",
     "blocked": "Blocked",
-    "answered": "Answered",
+    "answered": "Answer",
 
     "start": "Start",
     "continue": "Next",
-    "introduction": "Next to introduction",
-    "easyUsetitle": "Easy Use App",
+    "introduction": "Next introduction",
+    "easyUsetitle": "Using App Easily",
     "easyUseDecripstion": "Simplify your life with our user-friendly app.",
-    "problemtitle": "Stop Annoying Spam Calls with Our App",
-    "problemdecripstion": "Block spam calls and enjoy uninterrupted phone usage.",
+    "problemtitle": "Stop Annoying Spammer Call with our App",
+    "problemdecripstion": "Block spammer calls and enjoy using your mobile phone .",
 
-    "requestPermission": "Request User Accept Permission:",
-    "requestPermissionPress": "Press to accept permission",
+    "requestPermission": "Request User Permission For This Application:",
+    "requestPermissionPress": "Press Accept to allow this permission",
 
     "requestPermissionDecription": "To ensure the best performance of the app, please allow our app to be set as the default blocking app.",
 
