update contact report and history

--- a/components/i18n/vi.json
+++ b/components/i18n/vi.json
@@ -3,7 +3,7 @@
     "home": "Trang chủ",
     "setting": "Cài đặt",
     "history": "Lịch sử",
-    "contact": "Liên bạ",
+    "contact": "Danh bạ",
 
     "light": "Sáng",
     "DarkMode": "DarkMode",
