--- a/components/i18n/en.json
+++ b/components/i18n/en.json
@@ -13,6 +13,7 @@
     "add": "Add",
     "block": "Block",
     "call": "Call",
+    "delete": "delete",
     "edit": "Edit",
     "historyContact": "History Phones",
     "historyBlock": "History Blocked",
