--- a/components/i18n/vi.json
+++ b/components/i18n/vi.json
@@ -26,6 +26,7 @@
     "voicemail": "Thư Thoại",
     "rejected": "Từ Chối",
     "blocked": "Chặn",
+    "delete": "Xóa",
     "answered": "Trả Lời",
 
     "search": "Tìm kiếm",
