--- a/components/i18n/en.json
+++ b/components/i18n/en.json
@@ -25,6 +25,10 @@
     "blocked": "Blocked",
     "answered": "Answered",
 
+    "notification": "Notification",
+    "On": "On",
+    "Off": "Off",
+
     "start": "Start",
     "continue": "Next",
     "introduction": "Next to introduction",
@@ -37,7 +41,7 @@
     "requestPermissionPress": "Press to accept permission",
 
     "requestPermissionDecription": "To ensure the best performance of the app, please allow our app to be set as the default blocking app.",
-
+    "addBlock": "Add to blocklist",
     "this line is translated": "This line is translated",
     "pickerTopReport": "Top 10 most reported phone numbers",
     "pickerTopRecentReport": "Top 10 most recently reported phone numbers"
