--- a/components/i18n/en.json
+++ b/components/i18n/en.json
@@ -39,7 +39,7 @@
 
     "requestPermission": "Request User Accept Permission:",
     "requestPermissionPress": "Press to accept permission",
-
+    "blocklist": "BlockLists",
     "requestPermissionDecription": "To ensure the best performance of the app, please allow our app to be set as the default blocking app.",
     "addBlock": "Add to blocklist",
     "this line is translated": "This line is translated",
